--- a/.github/workflows/github-actions.yml
+++ b/.github/workflows/github-actions.yml
@@ -16,3 +16,21 @@ jobs:
         run: |
           ls ${{ github.workspace }}
       - run: echo "🍏 This job's status is ${{ job.status }}."
+
+- name: Deploy to Staging server
+  uses: easingthemes/ssh-deploy@main
+  with:
+    SSH_PRIVATE_KEY: ${{ secrets.SSH_PRIVATE_KEY }}
+    ARGS: "-rlgoDzvc -i"
+    SOURCE: "dist/"
+    REMOTE_HOST: ${{ secrets.REMOTE_HOST }}
+    REMOTE_USER: ${{ secrets.REMOTE_USER }}
+    TARGET: ${{ secrets.REMOTE_TARGET }}
+    EXCLUDE: "/dist/, /node_modules/"
+    SCRIPT_BEFORE: |
+      whoami
+      ls -al
+    SCRIPT_AFTER: |
+      whoami
+      ls -al
+      echo $RSYNC_STDOUT
