--- a/.github/workflows/github-actions.yml
+++ b/.github/workflows/github-actions.yml
@@ -16,8 +16,7 @@ jobs:
         run: |
           ls ${{ github.workspace }}
       - run: echo "🍏 This job's status is ${{ job.status }}."
-
-- name: Deploy to Staging server
+name: Deploy to Staging server
   uses: easingthemes/ssh-deploy@main
   with:
     SSH_PRIVATE_KEY: ${{ secrets.SSH_PRIVATE_KEY }}
