--- a/.github/workflows/github-actions.yml
+++ b/.github/workflows/github-actions.yml
@@ -19,9 +19,9 @@ jobs:
       - name: Deploy to Staging server
           uses: easingthemes/ssh-deploy@main
           with:
-            SSH_PRIVATE_KEY: ${{ secrets.SSH_PRIVATE_KEY }}
+            SSH_PRIVATE_KEY: ${{ secrets.KEY_SECRET }}
             ARGS: "-rlgoDzvc -i"
-            SOURCE: "dist/"
+            SOURCE: ""
             REMOTE_HOST: ${{ secrets.REMOTE_HOST }}
             REMOTE_USER: ${{ secrets.REMOTE_USER }}
             TARGET: ${{ secrets.REMOTE_TARGET }}
