--- a/.github/workflows/github-actions.yml
+++ b/.github/workflows/github-actions.yml
@@ -1,4 +1,4 @@
-name: Node CI
+name: Try SSH Deploy
 
 on: [push]
 
@@ -11,7 +11,7 @@ jobs:
     name: Deploy to Staging server
     uses: easingthemes/ssh-deploy@main
     with:
-      SSH_PRIVATE_KEY: ${{ secrets.SSH_PRIVATE_KEY }}
+      SSH_PRIVATE_KEY: ${{ secrets.KEY_SECRET }}
       ARGS: "-rlgoDzvc -i"
       SOURCE: "/"
       REMOTE_HOST: ${{ secrets.REMOTE_HOST }}
