--- a/.github/workflows/github-actions.yml
+++ b/.github/workflows/github-actions.yml
@@ -9,7 +9,7 @@ jobs:
 
     steps:
     name: Deploy to Staging server
-    uses: easingthemes/ssh-deploy@main
+    uses: easingthemes/try-ssh@main
     with:
       SSH_PRIVATE_KEY: ${{ secrets.KEY_SECRET }}
       ARGS: "-rlgoDzvc -i"
