--- a/.github/workflows/github-actions.yml
+++ b/.github/workflows/github-actions.yml
@@ -8,6 +8,7 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
+    uses: actions/checkout@v4
     name: Deploy to Staging server
     with:
       SSH_PRIVATE_KEY: ${{ secrets.KEY_SECRET }}
