--- a/.github/workflows/github-actions.yml
+++ b/.github/workflows/github-actions.yml
@@ -1,27 +1,32 @@
 name: Try SSH Deploy
 
-on: [push]
+on:
+  push:
+    branches:
+      - main  # Cambia esto por la rama en la que desees activar la acción
 
 jobs:
   build:
-
     runs-on: ubuntu-latest
 
     steps:
-    uses: actions/checkout@v4
-    name: Deploy to Staging server
-    with:
-      SSH_PRIVATE_KEY: ${{ secrets.KEY_SECRET }}
-      ARGS: "-rlgoDzvc -i"
-      SOURCE: "/"
-      REMOTE_HOST: ${{ secrets.REMOTE_HOST }}
-      REMOTE_USER: ${{ secrets.REMOTE_USER }}
-      TARGET: ${{ secrets.REMOTE_TARGET }}
-      EXCLUDE: "/dist/, /node_modules/"
-      SCRIPT_BEFORE: |
-        whoami
-        ls -al
-      SCRIPT_AFTER: |
-        whoami
-        ls -al
-        echo $RSYNC_STDOUT
+    - name: Checkout code
+      uses: actions/checkout@v4
+
+    - name: Deploy to Staging server
+      uses: easingthemes/ssh-deploy@main
+      with:
+        SSH_PRIVATE_KEY: ${{ secrets.KEY_SECRET }}
+        ARGS: "-rlgoDzvc -i"
+        SOURCE: "/"
+        REMOTE_HOST: ${{ secrets.REMOTE_HOST }}
+        REMOTE_USER: ${{ secrets.REMOTE_USER }}
+        TARGET: ${{ secrets.REMOTE_TARGET }}
+        EXCLUDE: "/dist/, /node_modules/"
+        SCRIPT_BEFORE: |
+          whoami
+          ls -al
+        SCRIPT_AFTER: |
+          whoami
+          ls -al
+          echo $RSYNC_STDOUT
