--- a/.github/workflows/github-actions.yml
+++ b/.github/workflows/github-actions.yml
@@ -10,7 +10,7 @@ jobs:
 
       - name: Crear Dist Vue
         run: |
-          cd ${{ github.workspace }}/vue-actions
+          cd ${{ github.workspace }}/vue-actions/
           npm install
           npm run build
 
@@ -18,7 +18,9 @@ jobs:
         run: |
           echo "${{ secrets.KEY_SECRET }}" > ~/prod_key.pem
           chmod 600 ~/prod_key.pem
-          cd ${{ github.workspace }}/vue-actions
+          cd ${{ github.workspace }}/vue-actions/
+          echo "Action desplegant a produccio" > ./web/last_deploy.txt
+          date >> ./web/last_deploy.txt
           scp -r -o stricthostkeychecking=no -o UserKnownHostsFile=/dev/null -i "~/prod_key.pem" ./vue-actions/dist/* ${{ secrets.REMOTE_USER }}@${{ secrets.REMOTE_HOST }}:/home/a22betvilver/web/a22betvilver.try-ssh.cat/public_html/
 
       - run: echo "🍏 This job's status is ${{ job.status }}."
