--- a/.github/workflows/github-actions.yml
+++ b/.github/workflows/github-actions.yml
@@ -14,6 +14,7 @@ jobs:
         run: |
           npm install eslint@8.10.0
           npm install @microsoft/eslint-formatter-sarif@2.1.7
+          npm init @eslint/config
           npx eslint .
             --config .eslintrc.js
             --ext .js,.jsx,.ts,.tsx
